--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "^0.16.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
